# CapStone

./: .gitignore  README.md  pyproject.toml
.uwsgi_config/: first_uwsgi.ini
cctvs/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
cctvs/migrations/: 0001_initial.py  0002_alter_cctv_options.py  0002_alter_violationfile_file.py  0002_video_upload_alter_video_cctv.py  0003_alter_violationfile_options_alter_violationfile_file.py  0003_video_name.py  0004_alter_violationfile_file.py  0004_rename_video_video_file_rename_name_video_file_name.py  0005_alter_video_file_name.py  0005_alter_violationfile_cctv.py  0006_alter_video_upload.py  0007_violationfile_delete_video.py
config/: celery.py  settings.py  storages.py  urls.py
config/settings/: base.py  local.py  prod.py
medias/: models.py
medias/migrations/: 0001_initial.py
regions/: models.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
violations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
violations/migrations/: 0001_initial.py  0002_alter_violation_options_alter_violationinfo_options_and_more.py
