[tool.poetry]
name = "캡스톤"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
djangorestframework = "^3.14.0"
wheel = "^0.40.0"
cmake = "^3.26.3"
gunicorn = "^20.1.0"
django = "^4.2"
uwsgi = "^2.0.21"
mysqlclient = "^2.1.1"
pymysql = "^1.0.3"
django-environ = "^0.10.0"
boto3 = "^1.26.126"
django-storages = "^1.13.2"
django-cors-headers = "^4.0.0"
celery = {extras = ["redis"], version = "^5.2.7"}
django-redis = "^5.2.0"
pillow = "^9.5.0"
imageio = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
